<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.NuevoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="205dp"
        android:layout_height="190dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
        app:srcCompat="@drawable/foto_02" />

    <EditText
        android:id="@+id/edtTipoDocumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/tipo_documento"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/ivFoto"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/ivFoto"
        app:layout_constraintTop_toBottomOf="@+id/ivFoto" />

    <EditText
        android:id="@+id/edtNumDocumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/num_documento"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/edtTipoDocumento"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtTipoDocumento"
        app:layout_constraintTop_toBottomOf="@+id/edtTipoDocumento" />

    <EditText
        android:id="@+id/edtFirtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/primer_nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtNumDocumento"
        app:layout_constraintStart_toStartOf="@+id/edtNumDocumento"
        app:layout_constraintTop_toBottomOf="@+id/edtNumDocumento" />

    <EditText
        android:id="@+id/edtSecondName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/segundo_nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtFirtName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtFirtName"
        app:layout_constraintTop_toBottomOf="@+id/edtFirtName" />

    <EditText
        android:id="@+id/edtFirtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/primer_apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtSecondName"
        app:layout_constraintStart_toStartOf="@+id/edtSecondName"
        app:layout_constraintTop_toBottomOf="@+id/edtSecondName" />

    <EditText
        android:id="@+id/edtSecondLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/segundo_apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtFirtLastName"
        app:layout_constraintStart_toStartOf="@+id/edtFirtLastName"
        app:layout_constraintTop_toBottomOf="@+id/edtFirtLastName" />

    <EditText
        android:id="@+id/edtSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/tipo_sexo"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/edtSecondLastName"
        app:layout_constraintStart_toStartOf="@+id/edtSecondLastName"
        app:layout_constraintTop_toBottomOf="@+id/edtSecondLastName" />

    <EditText
        android:id="@+id/edtEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/edtSexo"
        app:layout_constraintStart_toStartOf="@+id/edtSexo"
        app:layout_constraintTop_toBottomOf="@+id/edtSexo" />

</androidx.constraintlayout.widget.ConstraintLayout>